welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value l
		for (lissage <-1 to l-2) {
                                    ^